# celsus-api

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml  test.yml
src/api/: api.py
tests/unit/: conftest.py  test_health_check.py
