[project]
name = "celsus-api"
version = "0.0.1"
dependencies = [
    "fastapi",
    "uvicorn",
    "dramatiq[rabbitmq, watch]",
    "pymongo",
    "strawberry-graphql[fastapi]",
    "httpx",
]

[project.optional-dependencies]
test = [
    "ruff",
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]